# money-management-api

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
certs/: supabase-root-2021-ca.pem  supabase-root-2021.pem
migrations/20250612120000_uuid_multi_user/: down.sql  up.sql
migrations/20250612130000_row_level_security/: down.sql  up.sql
migrations/20250613140000_add_cache_revision/: down.sql  up.sql
migrations/20250614120000_add_extra_expense_limit/: down.sql  up.sql
migrations/20250614120000_add_extra_spent_limit/: down.sql  up.sql
migrations/20260615161000_add_language_to_user_settings/: down.sql  up.sql
migrations/20260615190000_income_materialization/: down.sql  up.sql
migrations/20260615200000_user_onboarding_completed/: down.sql  up.sql
migrations/20260618120000_add_theme_to_user_settings/: down.sql  up.sql
migrations/20260619120000_add_cancel_subscription/: down.sql  up.sql
migrations/20260630120000_add_accounts/: down.sql  up.sql
migrations/20260702120000_budget_completed_at/: down.sql  up.sql
scripts/: migrate.sh
src/: app.rs  config.rs  error.rs  main.rs  models.rs  rate_limit.rs  schema.rs  state.rs  validation.rs
src/auth/: cron.rs  extractor.rs  jwt.rs  middleware.rs  mod.rs
src/cache/: invalidation.rs  loader.rs  mod.rs  resource.rs  tests.rs  user_data_cache.rs
src/dto/: mod.rs
src/jobs/: daily_expenses.rs  mod.rs
src/repos/: accounts.rs  budgets.rs  connection.rs  exchange_rates.rs  expenses.rs  income.rs  income_schedules.rs  mod.rs  planned_expenses.rs  (+6 more)
(+34 files in other folders)
