[package]
name = "money_management_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2", features = ["postgres", "chrono", "serde_json", "64-column-tables", "uuid"] }
diesel-derive-enum = { version = "2", features = ["postgres"] }
diesel-async = { version = "0.6", features = ["postgres", "bb8"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tokio-postgres-rustls = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "0.26"
dotenvy = "0.15"
hyper = "1"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-full", "cors", "limit", "request-id", "timeout", "trace", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
governor = "0.8"
tower_governor = "0.8"
